ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: springboot

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-springboot
spec:
  annotations:
    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: springboot.com
    http:
      paths:
      #- path: /belajar
      - backend:
          serviceName: kubernetes
          servicePort: 80
  defaultBackend:
    resource:
      apiGroup: springboot.com
      kind: StorageBucket
      name: static-assets
  rules:
    - http:
        paths:
          - path: /icons
            pathType: ImplementationSpecific
            backend:
              resource:
                apiGroup: springboot.com
                kind: StorageBucket
                name: icon-assets
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
  labels:
    app: springboot
spec:
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - name: springboot
          image: arizki/springboot:36
          ports:
            - containerPort: 8081
