springboot.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  type: NodePort
  selector:
    app: springboot-app
    type: backend
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30011
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
  labels:
    app: springboot-app
    type: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app
      type: backend
  template:
    metadata:
      labels:
        app: springboot-app
        type: backend
    spec:
      containers:
        - name: springboot
          image: arizki/springboot:36
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-springboot
spec:
  annotations:
    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host:
    http:
      paths:
      - backend:
          serviceName: kubernetes
          servicePort: 80
  defaultBackend:
    resource:
      apiGroup:
      kind: StorageBucket
      name: static-assets
  rules:
    - http:
        paths:
          - path: /icons
            pathType: ImplementationSpecific
            backend:
              resource:
                apiGroup:
                kind: StorageBucket
                name: icon-assets
